# edge-foundry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEMO_MODELS.md  LAUNCH_RECOMMENDATIONS.md  QUICK_TEST_CHECKLIST.md  README.md  REORGANIZATION_PLAN.md  ROADMAP.md  TESTING_GUIDE.md  TESTING_PIPELINE.md  agent.py  cli.py  demo_models.yaml  download_demo_models.py  download_model.py  edgefoundry.yaml  load_model.py  model_manager.py  pyproject.toml  requirements.txt  run_model.py  setup-macbook.sh  setup-remote.bat  setup.py  start-with-cloudflare.bat  start-with-localtunnel.bat  start-with-ngrok.bat  telemetry.db  telemetry.py  test_cli.py  test_demo_models.py  test_download.py  test_pipeline.bat  test_pipeline.sh  test_telemetry.py
.edgefoundry/: .gitignore  edgefoundry.yaml
.edgefoundry/models/: tinyllama.gguf
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
dashboard/: README-MACBOOK.md  README.md  find-ip.sh  package-lock.json  package.json  setup-macbook.sh  setup.sh  tailwind.config.js
dashboard/public/: index.html  manifest.json
dashboard/src/: App.js  config.js  index.css
dashboard/src/components/: ConfigPanel.js  DemoModels.js  ErrorBoundary.js  Header.js  HealthStatus.js  InferencePanel.js  InferenceTable.js  MetricsOverview.js  ModelInfo.js  PerformanceCharts.js  RecentInferences.js  SystemStatus.js
dashboard/src/context/: AppContext.js
dashboard/src/hooks/: useApi.js
dashboard/src/services/: api.js
